--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -28,8 +28,7 @@
       src="https://widget.cloudinary.com/v2.0/global/all.js"
       type="text/javascript"
     ></script>
-    <script src="https://secure.mlstatic.com/sdk/javascript/v1/mercadopago.js"></script>
-    <title>React App</title>
+    <title>Smart Restaurant</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
